# FINAL

./: instructions.md
auxiliary/: .gitignore  CMakeLists.txt  Makefile  README.md
auxiliary/.github/workflows/: cmake-ubuntu.yml
auxiliary/src/: main.cpp  random_image.cpp  random_image.h
debugging/: Makefile  app  app.cpp  menu.cpp
readability/: Makefile  parse.cpp  parse.h  test.cpp
